--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start:nodemon": "nodemon ./bin/www"
+    "start": "node ./bin/www.ts",
+    "start:nodemon": "nodemon ./bin/www.ts"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -15,6 +15,12 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.8",
+    "@types/http-errors": "^1.8.0",
+    "@types/morgan": "^1.9.1",
+    "@types/node": "^14.6.4",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "mongoose": "^5.10.3",
