--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
     "@types/http-errors": "^1.8.0",
+    "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.4",
     "dotenv": "^8.2.0",
