--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start:prod": "NODE_ENV=production nodemon ./bin/www.ts",
-    "start:dev": "NODE_ENV=development nodemon ./bin/www.ts"
+    "start:dev": "NODE_ENV=development nodemon ./bin/www.ts",
+    "start": "node ./bin/www.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
