--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start:prod": "NODE_ENV=production nodemon ./bin/www.ts",
     "start:dev": "NODE_ENV=development nodemon ./bin/www.ts",
-    "start": "node ./bin/www.ts"
+    "start": "tsc && node build/bin/www.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
