--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start:prod": "NODE_ENV=production nodemon ./bin/www.ts",
-    "start:dev": "NODE_ENV=development nodemon ./bin/www.ts",
+    "prod": "NODE_ENV=production nodemon -x ts-node ./bin/www.ts",
+    "dev": "nodemon -x ts-node ./bin/www.ts",
     "start": "tsc && node build/bin/www.js"
   },
   "dependencies": {
@@ -12,15 +12,18 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "~4.16.1",
     "express-jwt": "^6.0.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.3",
     "morgan": "~1.9.1",
-    "rootpath": "^0.1.2"
-  },
-  "devDependencies": {
+    "rootpath": "^0.1.2",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.7",
@@ -31,10 +34,9 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/morgan": "^1.9.1",
-    "@types/node": "^14.6.4",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.1.5",
-    "mongoose": "^5.10.3",
+    "@types/node": "^14.6.4"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
