--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "prod": "NODE_ENV=production nodemon -x ts-node ./bin/www.ts",
-    "dev": "nodemon -x ts-node ./bin/www.ts",
+    "dev": "nodemon ./bin/www.ts",
     "start": "tsc && node build/bin/www.js"
   },
   "dependencies": {
