Update serve static files

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prod": "NODE_ENV=production nodemon -x ts-node ./bin/www.ts",
     "dev": "nodemon ./bin/www.ts",
-    "start": "tsc && node build/bin/www.js"
+    "start": "tsc && node ./build/bin/www.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
